# akan_autocomplete

./: DECISIONS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: annotation_guidelines.md  data_card.md  model_card.md
experiments/EXP-01/: config.yaml
experiments/EXP-02/: config.yaml
experiments/EXP-03/: config.yaml
experiments/EXP-04/: config.yaml
experiments/EXP-05/: config.yaml
experiments/EXP-06/: config.yaml
experiments/EXP-07/: config.yaml
experiments/EXP-08/: config.yaml
experiments/EXP-09/: config.yaml
paper/: draft.tex
paper/sections/: analysis.tex  conclusion.tex  data.tex  experiments.tex  introduction.tex  methodology.tex  related_work.tex
scripts/: download_data.sh  prepare_dataset.sh  push_to_hub.sh  run_experiment.sh
src/akan_autocomplete/: __init__.py
src/akan_autocomplete/baselines/: abena_zeroshot.py  fasttext_knn.py  mbert_zeroshot.py  ngram.py  random_predictor.py
src/akan_autocomplete/data/: normalize.py  sources.py  split.py  stats.py  tiers.py  tokenize.py
src/akan_autocomplete/demo/: app.py  quantize.py
src/akan_autocomplete/evaluation/: agreement.py  human_eval.py  metrics.py
src/akan_autocomplete/modeling/: experiment.py  inference.py  lora_config.py  tokenizer.py  trainer.py
tests/: test_inference.py  test_metrics.py  test_tokenizer.py
