[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akan-autocomplete"
version = "0.1.0"
description = "Next-word prediction and autocomplete for Asante Twi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/akan_autocomplete"]
